// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticsScreen empty state matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#0A0A1A",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
  >
    <View>
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 26,
            "fontWeight": "800",
            "letterSpacing": -0.5,
          }
        }
      >
        analytics.title
      </Text>
      <Text
        style={
          {
            "color": "#8B8FA3",
            "fontSize": 12,
            "marginTop": 2,
          }
        }
      >
        analytics.subtitle
      </Text>
    </View>
  </View>
  <RCTScrollView
    showsVerticalScrollIndicator={false}
    style={
      {
        "paddingBottom": 40,
      }
    }
  >
    <View>
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 8,
            "marginBottom": 8,
            "marginTop": 4,
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#13132B",
              "borderColor": "#1E1E42",
              "borderRadius": 16,
              "borderWidth": 1,
              "boxShadow": "0 2px 12px rgba(108, 99, 255, 0.3)",
              "flex": 1,
              "padding": 14,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "marginBottom": 4,
              }
            }
          >
            ⚡
          </Text>
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "800",
                },
                {
                  "color": "#6C63FF",
                },
              ]
            }
          >
            0
          </Text>
          <Text
            style={
              {
                "color": "#8B8FA3",
                "fontSize": 10,
                "fontWeight": "600",
                "letterSpacing": 0.5,
                "marginTop": 2,
                "textTransform": "uppercase",
              }
            }
          >
            analytics.totalHashrate
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#13132B",
              "borderColor": "#1E1E42",
              "borderRadius": 16,
              "borderWidth": 1,
              "boxShadow": "0 2px 12px rgba(108, 99, 255, 0.3)",
              "flex": 1,
              "padding": 14,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "marginBottom": 4,
              }
            }
          >
            💰
          </Text>
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "800",
                },
                {
                  "color": "#10B981",
                },
              ]
            }
          >
            —
          </Text>
          <Text
            style={
              {
                "color": "#8B8FA3",
                "fontSize": 10,
                "fontWeight": "600",
                "letterSpacing": 0.5,
                "marginTop": 2,
                "textTransform": "uppercase",
              }
            }
          >
            analytics.estDailyBTC
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#13132B",
              "borderColor": "#1E1E42",
              "borderRadius": 16,
              "borderWidth": 1,
              "boxShadow": "0 2px 12px rgba(108, 99, 255, 0.3)",
              "flex": 1,
              "padding": 14,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "marginBottom": 4,
              }
            }
          >
            🔌
          </Text>
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "800",
                },
                {
                  "color": "#F59E0B",
                },
              ]
            }
          >
            0
          </Text>
          <Text
            style={
              {
                "color": "#8B8FA3",
                "fontSize": 10,
                "fontWeight": "600",
                "letterSpacing": 0.5,
                "marginTop": 2,
                "textTransform": "uppercase",
              }
            }
          >
            analytics.power
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 8,
            "marginBottom": 8,
            "marginTop": 4,
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#13132B",
              "borderColor": "#1E1E42",
              "borderRadius": 16,
              "borderWidth": 1,
              "boxShadow": "0 2px 12px rgba(108, 99, 255, 0.3)",
              "flex": 1,
              "padding": 14,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "marginBottom": 4,
              }
            }
          >
            ⬡
          </Text>
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontSize": 22,
                "fontWeight": "800",
              }
            }
          >
            0
          </Text>
          <Text
            style={
              {
                "color": "#8B8FA3",
                "fontSize": 10,
                "fontWeight": "600",
                "letterSpacing": 0.5,
                "marginTop": 2,
                "textTransform": "uppercase",
              }
            }
          >
            analytics.miners
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#13132B",
              "borderColor": "#1E1E42",
              "borderRadius": 16,
              "borderWidth": 1,
              "boxShadow": "0 2px 12px rgba(108, 99, 255, 0.3)",
              "flex": 1,
              "padding": 14,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "marginBottom": 4,
              }
            }
          >
            🌡
          </Text>
          <Text
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "800",
                },
                {
                  "color": "#10B981",
                },
              ]
            }
          >
            —
            °
          </Text>
          <Text
            style={
              {
                "color": "#8B8FA3",
                "fontSize": 10,
                "fontWeight": "600",
                "letterSpacing": 0.5,
                "marginTop": 2,
                "textTransform": "uppercase",
              }
            }
          >
            analytics.avgTemp
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#13132B",
              "borderColor": "#1E1E42",
              "borderRadius": 16,
              "borderWidth": 1,
              "boxShadow": "0 2px 12px rgba(108, 99, 255, 0.3)",
              "flex": 1,
              "padding": 14,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "marginBottom": 4,
              }
            }
          >
            📦
          </Text>
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontSize": 22,
                "fontWeight": "800",
              }
            }
          >
            0
          </Text>
          <Text
            style={
              {
                "color": "#8B8FA3",
                "fontSize": 10,
                "fontWeight": "600",
                "letterSpacing": 0.5,
                "marginTop": 2,
                "textTransform": "uppercase",
              }
            }
          >
            analytics.totalShares
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 16,
            "borderWidth": 1,
            "marginBottom": 16,
            "marginHorizontal": 16,
            "padding": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 16,
              "fontWeight": "700",
              "marginBottom": 12,
            }
          }
        >
          analytics.hashrateHistory
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 6,
              "marginBottom": 12,
            }
          }
        >
          <View
            accessibilityLabel="Show 1 hour"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#1A1A3E",
                "borderColor": "#1E1E42",
                "borderRadius": 8,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 6,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "600",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              1h
            </Text>
          </View>
          <View
            accessibilityLabel="Show 24 hours"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#6C63FF",
                "borderColor": "#6C63FF",
                "borderRadius": 8,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 6,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "600",
                  },
                  {
                    "color": "#FFF",
                  },
                ]
              }
            >
              24h
            </Text>
          </View>
          <View
            accessibilityLabel="Show 7 days"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#1A1A3E",
                "borderColor": "#1E1E42",
                "borderRadius": 8,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 6,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "600",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              7d
            </Text>
          </View>
        </View>
        <Text
          style={
            [
              {
                "color": "#8B8FA3",
                "fontSize": 14,
                "lineHeight": 20,
                "textAlign": "center",
              },
              {
                "paddingVertical": 40,
              },
            ]
          }
        >
          analytics.notEnoughData
        </Text>
      </View>
      <View
        style={
          {
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 16,
            "borderWidth": 1,
            "marginBottom": 16,
            "marginHorizontal": 16,
            "padding": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 16,
              "fontWeight": "700",
              "marginBottom": 12,
            }
          }
        >
          analytics.uptimeHistory
        </Text>
        <Text
          style={
            [
              {
                "color": "#8B8FA3",
                "fontSize": 14,
                "lineHeight": 20,
                "textAlign": "center",
              },
              {
                "paddingVertical": 40,
              },
            ]
          }
        >
          analytics.notEnoughData
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`DashboardScreen empty state matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#0A0A1A",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
  >
    <View>
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 26,
            "fontWeight": "800",
            "letterSpacing": -0.5,
          }
        }
      >
        dashboard.title
      </Text>
      <Text
        style={
          {
            "alignItems": "center",
            "color": "#8B8FA3",
            "flexDirection": "row",
            "fontSize": 12,
            "marginTop": 2,
          }
        }
      >
        <Text
          style={
            {
              "color": "#10B981",
              "fontSize": 8,
              "marginRight": 4,
            }
          }
        >
          ●
        </Text>
         
        dashboard.subtitle
      </Text>
    </View>
    <View
      accessibilityLabel="Settings"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#13132B",
          "borderColor": "#1E1E42",
          "borderRadius": 12,
          "borderWidth": 1,
          "height": 38,
          "justifyContent": "center",
          "opacity": 1,
          "width": 38,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 16,
          }
        }
      >
        ⚙
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 6,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#13132B",
          "borderColor": "#1E1E42",
          "borderRadius": 16,
          "borderWidth": 1,
          "boxShadow": "0 2px 12px rgba(108, 99, 255, 0.3)",
          "flex": 1,
          "padding": 14,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 16,
            "marginBottom": 4,
          }
        }
      >
        ⬡
      </Text>
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 22,
            "fontWeight": "800",
          }
        }
      >
        0
      </Text>
      <Text
        style={
          {
            "color": "#8B8FA3",
            "fontSize": 10,
            "fontWeight": "600",
            "letterSpacing": 0.5,
            "marginTop": 2,
            "textTransform": "uppercase",
          }
        }
      >
        dashboard.miners
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#13132B",
          "borderColor": "#1E1E42",
          "borderRadius": 16,
          "borderWidth": 1,
          "boxShadow": "0 2px 12px rgba(108, 99, 255, 0.3)",
          "flex": 1,
          "padding": 14,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 16,
            "marginBottom": 4,
          }
        }
      >
        🟢
      </Text>
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 22,
              "fontWeight": "800",
            },
            {
              "color": "#10B981",
            },
          ]
        }
      >
        0
      </Text>
      <Text
        style={
          {
            "color": "#8B8FA3",
            "fontSize": 10,
            "fontWeight": "600",
            "letterSpacing": 0.5,
            "marginTop": 2,
            "textTransform": "uppercase",
          }
        }
      >
        dashboard.online
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#13132B",
          "borderColor": "#1E1E42",
          "borderRadius": 16,
          "borderWidth": 1,
          "boxShadow": "0 2px 12px rgba(108, 99, 255, 0.3)",
          "flex": 1,
          "padding": 14,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 16,
            "marginBottom": 4,
          }
        }
      >
        ⚡
      </Text>
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 22,
              "fontWeight": "800",
            },
            {
              "color": "#6C63FF",
            },
          ]
        }
      >
        0
      </Text>
      <Text
        style={
          {
            "color": "#8B8FA3",
            "fontSize": 10,
            "fontWeight": "600",
            "letterSpacing": 0.5,
            "marginTop": 2,
            "textTransform": "uppercase",
          }
        }
      >
        dashboard.hashrate
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 6,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#13132B",
          "borderColor": "#1E1E42",
          "borderRadius": 16,
          "borderWidth": 1,
          "boxShadow": "0 2px 12px rgba(108, 99, 255, 0.3)",
          "flex": 1,
          "padding": 14,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 16,
            "marginBottom": 4,
          }
        }
      >
        🔌
      </Text>
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 22,
              "fontWeight": "800",
            },
            {
              "color": "#F59E0B",
            },
          ]
        }
      >
        0.0
      </Text>
      <Text
        style={
          {
            "color": "#8B8FA3",
            "fontSize": 10,
            "fontWeight": "600",
            "letterSpacing": 0.5,
            "marginTop": 2,
            "textTransform": "uppercase",
          }
        }
      >
        dashboard.power
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#13132B",
          "borderColor": "#1E1E42",
          "borderRadius": 16,
          "borderWidth": 1,
          "boxShadow": "0 2px 12px rgba(108, 99, 255, 0.3)",
          "flex": 1,
          "padding": 14,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 16,
            "marginBottom": 4,
          }
        }
      >
        🌡
      </Text>
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 22,
              "fontWeight": "800",
            },
            {
              "color": "#10B981",
            },
          ]
        }
      >
        —
        °
      </Text>
      <Text
        style={
          {
            "color": "#8B8FA3",
            "fontSize": 10,
            "fontWeight": "600",
            "letterSpacing": 0.5,
            "marginTop": 2,
            "textTransform": "uppercase",
          }
        }
      >
        dashboard.avgTemp
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#13132B",
          "borderColor": "#1E1E42",
          "borderRadius": 16,
          "borderWidth": 1,
          "boxShadow": "0 2px 12px rgba(108, 99, 255, 0.3)",
          "flex": 1,
          "padding": 14,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 16,
            "marginBottom": 4,
          }
        }
      >
        📊
      </Text>
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 22,
              "fontWeight": "800",
            },
            {
              "color": "#3B82F6",
            },
          ]
        }
      >
        —
      </Text>
      <Text
        style={
          {
            "color": "#8B8FA3",
            "fontSize": 10,
            "fontWeight": "600",
            "letterSpacing": 0.5,
            "marginTop": 2,
            "textTransform": "uppercase",
          }
        }
      >
        dashboard.efficiency
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 32,
      }
    }
  >
    <Text
      style={
        {
          "color": "#5C5F7A",
          "fontSize": 48,
          "marginBottom": 16,
        }
      }
    >
      ⬡
    </Text>
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 20,
          "fontWeight": "700",
          "marginBottom": 8,
        }
      }
    >
      dashboard.noMiners
    </Text>
    <Text
      style={
        {
          "color": "#8B8FA3",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 16,
          "textAlign": "center",
        }
      }
    >
      dashboard.noMinersBody
    </Text>
    <View
      style={
        {
          "gap": 6,
          "marginBottom": 24,
        }
      }
    >
      <Text
        style={
          {
            "color": "#5C5F7A",
            "fontSize": 13,
            "textAlign": "center",
          }
        }
      >
        dashboard.step1
      </Text>
      <Text
        style={
          {
            "color": "#5C5F7A",
            "fontSize": 13,
            "textAlign": "center",
          }
        }
      >
        dashboard.step2
      </Text>
      <Text
        style={
          {
            "color": "#5C5F7A",
            "fontSize": 13,
            "textAlign": "center",
          }
        }
      >
        dashboard.step3
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 12,
        }
      }
    >
      <View
        accessibilityLabel="Add Miner"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#6C63FF",
            "borderRadius": 12,
            "opacity": 1,
            "paddingHorizontal": 24,
            "paddingVertical": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFF",
              "fontSize": 15,
              "fontWeight": "700",
            }
          }
        >
          dashboard.addMiner
        </Text>
      </View>
      <View
        accessibilityLabel="Scan Network"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "opacity": 1,
            "paddingHorizontal": 24,
            "paddingVertical": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "600",
            }
          }
        >
          dashboard.scanNetwork
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityLabel="Add miner"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#6C63FF",
        "borderColor": "#8B85FF40",
        "borderRadius": 18,
        "borderWidth": 1,
        "bottom": 24,
        "boxShadow": "0 4px 20px rgba(108, 99, 255, 0.3)",
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 20,
        "width": 60,
      }
    }
  >
    <Text
      style={
        {
          "color": "#FFF",
          "fontSize": 28,
          "fontWeight": "400",
          "lineHeight": 30,
        }
      }
    >
      +
    </Text>
  </View>
</View>
`;

exports[`PoolsScreen empty state matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#0A0A1A",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
  >
    <View>
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 26,
            "fontWeight": "800",
            "letterSpacing": -0.5,
          }
        }
      >
        pools.title
      </Text>
      <Text
        style={
          {
            "color": "#8B8FA3",
            "fontSize": 12,
            "marginTop": 2,
          }
        }
      >
        pools.subtitle
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 32,
      }
    }
  >
    <Text
      style={
        {
          "color": "#5C5F7A",
          "fontSize": 48,
          "marginBottom": 16,
        }
      }
    >
      🌊
    </Text>
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 20,
          "fontWeight": "700",
          "marginBottom": 8,
        }
      }
    >
      pools.noPools
    </Text>
    <Text
      style={
        {
          "color": "#8B8FA3",
          "fontSize": 14,
          "textAlign": "center",
        }
      }
    >
      pools.noPoolsBody
    </Text>
  </View>
</View>
`;

exports[`SettingsScreen matches snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#0A0A1A",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 24,
          "fontWeight": "800",
          "letterSpacing": -0.5,
          "marginBottom": 20,
          "marginTop": 8,
        }
      }
    >
      settings.title
    </Text>
    <View
      style={
        {
          "marginBottom": 24,
        }
      }
    >
      <Text
        style={
          {
            "color": "#8B8FA3",
            "fontSize": 11,
            "fontWeight": "700",
            "letterSpacing": 0.8,
            "marginBottom": 8,
            "marginLeft": 4,
            "textTransform": "uppercase",
          }
        }
      >
        settings.account
      </Text>
      <View
        accessibilityLabel="Wallets"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "opacity": 1,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.wallets
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#5C5F7A",
                "fontSize": 20,
                "fontWeight": "300",
              }
            }
          >
            ›
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Plan"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "opacity": 1,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.plan
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 8,
                  "paddingHorizontal": 10,
                  "paddingVertical": 3,
                },
                {
                  "backgroundColor": "#1A1A3E",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#8B8FA3",
                  },
                ]
              }
            >
              settings.free
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#5C5F7A",
                "fontSize": 20,
                "fontWeight": "300",
              }
            }
          >
            ›
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Remote Sync"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "opacity": 1,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.remoteSync
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#8B8FA3",
                  "fontSize": 15,
                },
                null,
              ]
            }
          >
            settings.off
          </Text>
          <Text
            style={
              {
                "color": "#5C5F7A",
                "fontSize": 20,
                "fontWeight": "300",
              }
            }
          >
            ›
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginBottom": 24,
        }
      }
    >
      <Text
        style={
          {
            "color": "#8B8FA3",
            "fontSize": 11,
            "fontWeight": "700",
            "letterSpacing": 0.8,
            "marginBottom": 8,
            "marginLeft": 4,
            "textTransform": "uppercase",
          }
        }
      >
        settings.appearance
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.theme
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 6,
            }
          }
        >
          <View
            accessibilityLabel="system theme"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#1A1A3E",
                "borderColor": "#1E1E42",
                "borderRadius": 8,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 6,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "600",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              🔄
               
              themes.system
            </Text>
          </View>
          <View
            accessibilityLabel="dark theme"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#6C63FF",
                "borderColor": "#6C63FF",
                "borderRadius": 8,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 6,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "600",
                  },
                  {
                    "color": "#FFF",
                  },
                ]
              }
            >
              🌙
               
              themes.dark
            </Text>
          </View>
          <View
            accessibilityLabel="light theme"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#1A1A3E",
                "borderColor": "#1E1E42",
                "borderRadius": 8,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 6,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "600",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              ☀
               
              themes.light
            </Text>
          </View>
          <View
            accessibilityLabel="neon theme"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#1A1A3E",
                "borderColor": "#1E1E42",
                "borderRadius": 8,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 6,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "600",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              💜
               
              themes.neon
            </Text>
          </View>
          <View
            accessibilityLabel="matrix theme"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#1A1A3E",
                "borderColor": "#1E1E42",
                "borderRadius": 8,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 6,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "600",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              💚
               
              themes.matrix
            </Text>
          </View>
          <View
            accessibilityLabel="5tratum theme"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#1A1A3E",
                "borderColor": "#1E1E42",
                "borderRadius": 8,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 6,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "600",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              🔶
               
              themes.5tratum
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginBottom": 24,
        }
      }
    >
      <Text
        style={
          {
            "color": "#8B8FA3",
            "fontSize": 11,
            "fontWeight": "700",
            "letterSpacing": 0.8,
            "marginBottom": 8,
            "marginLeft": 4,
            "textTransform": "uppercase",
          }
        }
      >
        settings.power
      </Text>
      <Text
        style={
          [
            {
              "color": "#8B8FA3",
              "fontSize": 12,
              "lineHeight": 18,
            },
            {
              "marginBottom": 10,
            },
          ]
        }
      >
        settings.powerCostHelp
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.perKwh
        </Text>
        <TextInput
          accessibilityLabel="Power cost input"
          keyboardType="decimal-pad"
          onChangeText={[Function]}
          placeholder="0.12"
          placeholderTextColor="#5C5F7A"
          style={
            [
              {
                "backgroundColor": "#1A1A3E",
                "borderColor": "#1E1E42",
                "borderRadius": 10,
                "borderWidth": 1,
                "color": "#FFFFFF",
                "fontFamily": "monospace",
                "fontSize": 14,
                "padding": 12,
              },
              {
                "flex": 1,
                "marginLeft": 12,
                "maxWidth": 120,
                "textAlign": "right",
              },
            ]
          }
          value=""
        />
      </View>
    </View>
    <View
      style={
        {
          "marginBottom": 24,
        }
      }
    >
      <Text
        style={
          {
            "color": "#8B8FA3",
            "fontSize": 11,
            "fontWeight": "700",
            "letterSpacing": 0.8,
            "marginBottom": 8,
            "marginLeft": 4,
            "textTransform": "uppercase",
          }
        }
      >
        settings.miners
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.totalMiners
        </Text>
        <Text
          style={
            {
              "color": "#8B8FA3",
              "fontSize": 15,
            }
          }
        >
          0
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.online
        </Text>
        <Text
          style={
            [
              {
                "color": "#8B8FA3",
                "fontSize": 15,
              },
              {
                "color": "#10B981",
              },
            ]
          }
        >
          0
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.autoScan
        </Text>
        <RCTSwitch
          accessibilityLabel="Auto-scan network"
          accessibilityRole="switch"
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onTintColor="#6C63FF60"
          style={
            {
              "alignSelf": "flex-start",
            }
          }
          thumbTintColor="#5C5F7A"
          tintColor="#1E1E42"
          value={false}
        />
      </View>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "opacity": 1,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.refreshAll
        </Text>
        <Text
          style={
            {
              "color": "#6C63FF",
              "fontSize": 15,
              "fontWeight": "600",
            }
          }
        >
          settings.refresh
        </Text>
      </View>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "opacity": 1,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.scanNetwork
        </Text>
        <Text
          style={
            {
              "color": "#6C63FF",
              "fontSize": 15,
              "fontWeight": "600",
            }
          }
        >
          settings.scan
        </Text>
      </View>
      <View
        accessibilityLabel="Groups"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "opacity": 1,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.groups
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#6C63FF",
                "fontSize": 15,
                "fontWeight": "600",
              }
            }
          >
            settings.manage
          </Text>
          <Text
            style={
              {
                "color": "#5C5F7A",
                "fontSize": 20,
                "fontWeight": "300",
              }
            }
          >
            ›
          </Text>
        </View>
      </View>
      <View
        accessibilityLabel="Export CSV"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "opacity": 1,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.exportCsv
        </Text>
        <Text
          style={
            {
              "color": "#6C63FF",
              "fontSize": 15,
              "fontWeight": "600",
            }
          }
        >
          settings.snapshots
        </Text>
      </View>
      <View
        accessibilityLabel="Export JSON backup"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "opacity": 1,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.exportJson
        </Text>
        <Text
          style={
            {
              "color": "#6C63FF",
              "fontSize": 15,
              "fontWeight": "600",
            }
          }
        >
          settings.fullBackup
        </Text>
      </View>
      <View
        accessibilityLabel="Import data"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "opacity": 1,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.importData
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#6C63FF",
                "fontSize": 15,
                "fontWeight": "600",
              }
            }
          >
            settings.restore
          </Text>
          <Text
            style={
              {
                "color": "#5C5F7A",
                "fontSize": 20,
                "fontWeight": "300",
              }
            }
          >
            ›
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginBottom": 24,
        }
      }
    >
      <Text
        style={
          {
            "color": "#8B8FA3",
            "fontSize": 11,
            "fontWeight": "700",
            "letterSpacing": 0.8,
            "marginBottom": 8,
            "marginLeft": 4,
            "textTransform": "uppercase",
          }
        }
      >
        settings.about
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.version
        </Text>
        <Text
          style={
            {
              "color": "#8B8FA3",
              "fontSize": 15,
            }
          }
        >
          1.0.0
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#13132B",
            "borderColor": "#1E1E42",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 2,
            "padding": 14,
          }
        }
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
              "fontSize": 15,
              "fontWeight": "500",
            }
          }
        >
          settings.madeFor
        </Text>
        <Text
          style={
            {
              "color": "#8B8FA3",
              "fontSize": 15,
            }
          }
        >
          settings.bitaxeMiners
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
